package rpg;

public class AlchemicIngredient {
}
