package rpg;

public class Device {
}
