package rpg;

public class IngredientContainer {
}
