package rpg;

public class Kettle extends Device{
}
