package rpg;

public class Laboratory {
}
