package rpg;

public class TemperatureDevice extends Device{
}
